Change vscode :nohl binding to <leader>n

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -27,7 +27,8 @@
     },
     {
       "before": [
-        "<C-n>"
+        "<leader>",
+        "n"
       ],
       "commands": [
         ":nohl"
