vscode nnoremap <leader>w to :w

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -44,6 +44,15 @@
     },
     {
       "before": [
+        "<leader>",
+        "w"
+      ],
+      "commands": [
+        ":w"
+      ],
+    },
+    {
+      "before": [
         "g",
         "i"
       ],
