vscode nnoremap gr to editor.action.goToReferences

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -60,6 +60,16 @@
         "editor.action.goToImplementation"
       ],
       "silent": true
+    },
+    {
+      "before": [
+        "g",
+        "r"
+      ],
+      "commands": [
+        "editor.action.goToReferences"
+      ],
+      "silent": true
     }
   ],
   "vim.leader": "<space>",
