--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -14,3 +14,6 @@ screenshot-high-bit-depth=yes
 screenshot-sw=no
 screenshot-directory="~~/screenshots"
 screenshot-template="%f-%wH.%wM.%wS.%wT-#%#00n"
+
+###### Subtitles
+sub-color='1.0/1.0/1.0/0.70'
