vscode nnoremap gi to editor.action.goToImplementation

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -41,6 +41,16 @@
         "lineBreakInsert"
       ],
       "silent": true
+    },
+    {
+      "before": [
+        "g",
+        "i"
+      ],
+      "commands": [
+        "editor.action.goToImplementation"
+      ],
+      "silent": true
     }
   ],
   "vim.leader": "<space>",
