Set vscode <leader>f to format document

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -77,6 +77,15 @@
     {
       "before": [
         "<leader>",
+        "f"
+      ],
+      "commands": [
+        "editor.action.formatDocument"
+      ]
+    },
+    {
+      "before": [
+        "<leader>",
         "m"
       ],
       "commands": [
