Set vscode workbench editor limit to 6

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -5,6 +5,8 @@
   "editor.minimap.autohide": true,
   "editor.formatOnSave": true,
   "workbench.startupEditor": "none",
+  "workbench.editor.limit.enabled": true,
+  "workbench.editor.limit.value": 6,
   "workbench.externalBrowser": "firefox",
   "files.trimTrailingWhitespace": true,
   "extensions.experimental.affinity": {
