--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,14 +1,17 @@
 {
+  "terminal.integrated.fontFamily": "CaskaydiaCove Nerd Font Mono",
+  "editor.fontFamily": "'Cascadia Code', Consolas, 'Courier New', monospace",
+  "editor.fontLigatures": true,
+  "editor.minimap.autohide": true,
+  "workbench.startupEditor": "none",
+  "workbench.colorTheme": "Catppuccin Mocha",
+  "workbench.externalBrowser": "firefox",
+  "files.trimTrailingWhitespace": true,
   "extensions.experimental.affinity": {
     "asvetliakov.vscode-neovim": 1
   },
-  "workbench.startupEditor": "none",
-  "workbench.colorTheme": "Catppuccin Mocha",
-  "files.trimTrailingWhitespace": true,
-  "editor.minimap.autohide": true,
   "[json][jsonc][typescript][typescriptreact][html][css]": {
     "editor.tabSize": 2,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "workbench.externalBrowser": "firefox"
+  }
 }
