Set tmux new window path same as current pane

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,2 +1,6 @@
 set-option -a terminal-features 'xterm-256color:RGB'
 set-option -g mouse on
+
+bind c new-window -c '#{pane_current_path}'
+bind % split-window -h -c '#{pane_current_path}'
+bind '"' split-window -v -c '#{pane_current_path}'
