Change vscode catppuccin accentColor to rosewater

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -4,6 +4,7 @@
   "editor.fontLigatures": true,
   "editor.minimap.autohide": true,
   "editor.formatOnSave": true,
+  "catppuccin.accentColor": "rosewater",
   "workbench.colorTheme": "Catppuccin Macchiato",
   "workbench.startupEditor": "none",
   "workbench.activityBar.location": "bottom",
