--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,6 @@
 set-option -a terminal-features 'xterm-256color:RGB'
 set-option -g mouse on
+set-option -g focus-events on
 
 bind c new-window -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
