Enable vscode vim.smartRelativeLine

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -109,6 +109,7 @@
     "<C-f>": false,
     "<C-b>": false
   },
+  "vim.smartRelativeLine": true,
   "files.trimTrailingWhitespace": true,
   "[json]": {
     "editor.tabSize": 2
