--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,24 +1,30 @@
 {
+  // Color Theme
+  "workbench.colorTheme": "Catppuccin Mocha",
+  "catppuccin.accentColor": "rosewater",
+
   "terminal.integrated.fontFamily": "CaskaydiaCove Nerd Font Mono",
   "editor.fontFamily": "'Cascadia Code', Consolas, 'Courier New', monospace",
   "editor.fontLigatures": true,
   "editor.minimap.autohide": true,
   "editor.formatOnSave": true,
-  "catppuccin.accentColor": "rosewater",
-  "workbench.colorTheme": "Catppuccin Mocha",
   "workbench.startupEditor": "none",
   "workbench.activityBar.location": "bottom",
   "workbench.editor.limit.enabled": true,
   "workbench.editor.limit.value": 6,
   "workbench.externalBrowser": "firefox",
   "files.trimTrailingWhitespace": true,
+  "remote.autoForwardPortsSource": "hybrid",
+
+  // Neovim
   "extensions.experimental.affinity": {
     "asvetliakov.vscode-neovim": 1
   },
+
+  // Prettier
   "[json][jsonc][typescript][typescriptreact][html][css][javascript]": {
     "editor.tabSize": 2,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "prettier.singleQuote": true,
-  "remote.autoForwardPortsSource": "hybrid"
+  "prettier.singleQuote": true
 }
