--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -31,10 +31,12 @@
     "backspace",
     "delete"
   ],
+  "workbench.startupEditor": "none",
   "workbench.colorTheme": "Gruvbox Dark Soft",
   "files.trimTrailingWhitespace": true,
-  "workbench.startupEditor": "none",
-  "[json][typescript][typescriptreact][html][css]": {
-    "editor.tabSize": 2
+  "editor.minimap.autohide": true,
+  "[json][jsonc][typescript][typescriptreact][html][css]": {
+    "editor.tabSize": 2,
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   }
 }
