Update tmux.conf terminal-features to wildcard

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,4 @@
-set-option -a terminal-features 'xterm-256color:RGB'
+set-option -as terminal-features ',*:RGB'
 set-option -g mouse on
 set-option -g focus-events on
 
