--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,8 @@ set-option -as terminal-features ',*:RGB'
 set-option -g mouse on
 set-option -g focus-events on
 
+set -g status-style bg=default
+
 bind c new-window -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
 bind '"' split-window -v -c '#{pane_current_path}'
