Set video-sync=display-resample in mpv.conf

--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -2,6 +2,7 @@ profile=gpu-hq
 gpu-api=vulkan
 vo=gpu-next
 target-colorspace-hint=yes
+video-sync=display-resample
 
 ###### General
 keep-open=yes
