--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -15,6 +15,7 @@
     "vscodevim.vim": 1
   },
   "vim.incsearch": true,
+  "vim.hlsearch": true,
   "vim.handleKeys": {
     "<C-d>": true,
     "<C-s>": false,
@@ -26,6 +27,10 @@
   },
   "vim.leader": "<space>",
   "vim.normalModeKeyBindingsNonRecursive": [
+    {
+      "before": ["<Esc>", "<Esc>"],
+      "commands": [":nohl"]
+    },
     {
       "before": ["<leader>", "w"],
       "commands": [":w"]
@@ -93,6 +98,5 @@
   "[json][jsonc][typescript][typescriptreact][html][css][javascript]": {
     "editor.tabSize": 2,
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "prettier.singleQuote": true
+  }
 }
