Set tmux base-index to 1 and set titles

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,9 +1,15 @@
+set -g base-index 1
+
+set-window-option -g automatic-rename on
+set-option -g set-titles on
+
 set-option -as terminal-features ',*:RGB'
+
+set -g status-style bg=default
+set -g escape-time 10
+
 set-option -g mouse on
 set-option -g focus-events on
-
-set -g escape-time 10
-set -g status-style bg=default
 
 bind c new-window -c '#{pane_current_path}'
 bind % split-window -h -c '#{pane_current_path}'
