--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -2,7 +2,7 @@
   "terminal.integrated.fontFamily": "JetBrains Mono, Symbols Nerd Font Mono",
   "editor.fontFamily": "JetBrains Mono, Consolas, 'Courier New', monospace",
   "editor.fontLigatures": true,
-  "editor.minimap.autohide": true,
+  "editor.minimap.autohide": "mouseover",
   "editor.formatOnSave": true,
   "editor.wordWrap": "on",
   "workbench.startupEditor": "none",
